Design of ownership article

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
 <app-header></app-header>
+<div style="margin-inline: 7%;">
+    <app-ownership></app-ownership>
+</div>
+
 
 <!-- <h1>{{ title }}</h1> -->
