--- a/src/app/ownership/ownership.component.html
+++ b/src/app/ownership/ownership.component.html
@@ -1,1 +1,127 @@
-<p>ownership works!</p>
+<section class="row mx-5 justify-content-between">
+    <!-- <div *ngFor >
+        <article>
+
+        </article>
+    </div> -->
+    <article
+        class="border border-2 border-black rounded col-3 mx-5 mt-5 text-center pt-4 justify-content-center shadow  mb-5 rounded"
+        style="background-color: #f3f3f3;">
+        <img src="../assets/img/casa-moderna.jpg" alt=""
+            class="border border-2 shadow-sm p-1 bg-body rounded imgOwnership">
+        <div class="m-4 text-start">
+            <ul class="list-group border border-2">
+                <li class="list-group-item ">
+                    <div class="row">
+                        <div class="d-inline col-6">Habitaciones</div>
+                        <div class="d-inline col-6">5</div>
+                    </div>
+                </li>
+                <li class="list-group-item">
+                    <div class="row">
+                        <div class="d-inline col-6">Baños</div>
+                        <div class="d-inline col-6">2</div>
+                    </div>
+                </li>
+                <li class="list-group-item">
+                    <div class="row">
+                        <div class="d-inline col-6">Garage</div>
+                        <div class="d-inline col-6">Si</div>
+                    </div>
+                </li>
+                <li class="list-group-item">
+                    <div class="row">
+                        <div class="d-inline col-6">Exterior</div>
+                        <div class="d-inline col-6">No</div>
+                    </div>
+                </li>
+                <li class="list-group-item">
+                    <div class="row">
+                        <div class="d-inline col-6">Precio</div>
+                        <div class="d-inline col-6">320.000$</div>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </article>
+    <article
+        class="border border-2 border-black rounded col-3 mx-5 mt-5 text-center pt-4 ustify-content-center shadow mb-5 rounded"
+        style="background-color: #f3f3f3;">
+        <img src="../assets/img/casa-piscina.jpg" alt=""
+            class="border border-2 shadow-sm p-1 bg-body rounded imgOwnership">
+            <div class="m-4 text-start">
+                <ul class="list-group border border-2">
+                    <li class="list-group-item ">
+                        <div class="row">
+                            <div class="d-inline col-6">Habitaciones</div>
+                            <div class="d-inline col-6">5</div>
+                        </div>
+                    </li>
+                    <li class="list-group-item">
+                        <div class="row">
+                            <div class="d-inline col-6">Baños</div>
+                            <div class="d-inline col-6">2</div>
+                        </div>
+                    </li>
+                    <li class="list-group-item">
+                        <div class="row">
+                            <div class="d-inline col-6">Garage</div>
+                            <div class="d-inline col-6">Si</div>
+                        </div>
+                    </li>
+                    <li class="list-group-item">
+                        <div class="row">
+                            <div class="d-inline col-6">Exterior</div>
+                            <div class="d-inline col-6">No</div>
+                        </div>
+                    </li>
+                    <li class="list-group-item">
+                        <div class="row">
+                            <div class="d-inline col-6">Precio</div>
+                            <div class="d-inline col-6">320.000$</div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+    </article>
+    <article
+        class="border border-2 border-black rounded col-3 mx-5 mt-5 text-center pt-4 justify-content-center shadow mb-5 rounded"
+        style="background-color: #f3f3f3;">
+        <img src="../assets/img/casa-sencilla.jpg" alt=""
+            class="border border-2 shadow-sm p-1 bg-body rounded imgOwnership">
+            <div class="m-4 text-start">
+                <ul class="list-group border border-2">
+                    <li class="list-group-item ">
+                        <div class="row">
+                            <div class="d-inline col-6">Habitaciones</div>
+                            <div class="d-inline col-6">5</div>
+                        </div>
+                    </li>
+                    <li class="list-group-item">
+                        <div class="row">
+                            <div class="d-inline col-6">Baños</div>
+                            <div class="d-inline col-6">2</div>
+                        </div>
+                    </li>
+                    <li class="list-group-item">
+                        <div class="row">
+                            <div class="d-inline col-6">Garage</div>
+                            <div class="d-inline col-6">Si</div>
+                        </div>
+                    </li>
+                    <li class="list-group-item">
+                        <div class="row">
+                            <div class="d-inline col-6">Exterior</div>
+                            <div class="d-inline col-6">No</div>
+                        </div>
+                    </li>
+                    <li class="list-group-item">
+                        <div class="row">
+                            <div class="d-inline col-6">Precio</div>
+                            <div class="d-inline col-6">320.000$</div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+    </article>
+</section>
