--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <header>
-  <nav class="navbar navbar-light row d-flex estilo p-4" style="background-color: #d6d6d6;">
+  <nav class="navbar navbar-light d-flex estilo p-4 shadow mb-5 rounded" style="background-color: #f3f3f3;">
     <div class="col-4 d-flex justify-content-center">
       <a href="" class="navbar-brand">LOGOTIPO</a>
     </div>
