Create concept view of material carousel

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-header></app-header>
+<app-carousel></app-carousel>
 <div style="margin-inline: 7%;">
     <app-ownership></app-ownership>
 </div>
