--- a/src/app/carousel/carousel.component.html
+++ b/src/app/carousel/carousel.component.html
@@ -6,7 +6,7 @@
     overlayColor="#00000040" [hideOverlay]="false">
     <div
       style="width: 100%; height: 100%; display: flex; flex-direction: column; align-items: center; justify-content: center">
-      <h1 style="color:azure; font-size:400%; padding: 10px;"> Compra </h1> <!-- Slide Number {{ i+1 }} -->
+      <h1 style="color:azure; font-size:400%; padding: 10px;"> {{ getOwnershipOperation(i) }}  </h1> <!-- Slide Number {{ i+1 }} -->
     </div>
   </mat-carousel-slide>
 
