--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+.imgBackground
+    position: fixed
+    bottom: 0
+    width: 100%
+    height: px 
+    line-height: 60px 
+    background-image: url("/assets/img/fondoBlanco.jpg")
