Solution error of background image

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 <app-carousel></app-carousel>
-<div style="margin-inline: 7%;">
+<div class="imgBackground">
     <app-ownership></app-ownership>
 </div>
 
