--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,8 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 .imgBackground
-    position: fixed
+    position: relative
     bottom: 0
     width: 100%
-    height: px 
+    height: 100%
     line-height: 60px 
     background-image: url("/assets/img/fondoBlanco.jpg")
