Creation of footer and border of header

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<header>
+<header class="border-bottom border-3 border-danger">
   <nav class="navbar navbar-light d-flex estilo p-4 shadow rounded" style="background-color: #f3f3f3;">
     <div class="col-4 d-flex justify-content-center">
       <a href="" class="navbar-brand">LOGOTIPO</a>
