--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
 <div class="imgBackground">
     <app-ownership></app-ownership>
 </div>
+<app-footer></app-footer>
 
 
 <!-- <h1>{{ title }}</h1> -->
