--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 <app-header></app-header>
 <app-carousel></app-carousel>
 <div class="imgBackground">
-    <app-ownership></app-ownership>
+    <!-- <app-ownership></app-ownership> (Deleted when start to use router) -->
+    <router-outlet></router-outlet>
 </div>
 <app-footer></app-footer>
 
