--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,10 +4,13 @@
       <a href="" class="navbar-brand">LOGOTIPO</a>
     </div>
     <div class="col-6 d-flex justify-content-center mx-2">
-      <a href="" class="navbar-brand">INICIO</a>
-      <a href="" class="navbar-brand">INMOBILIARIA</a>
-      <a href="" class="navbar-brand">VENTANAS</a>
-      <a href="" class="navbar-brand">LIMPIEZAS</a>
+      <!-- Edit routerLinkActive when all links are done -->
+      <a routerLink="/ownership" routerLinkActive="active" class="navbar-brand">INICIO</a>
+      <a routerLink="/ownership" routerLinkActive="active" class="navbar-brand">INMOBILIARIA</a>
+      <!-- 
+      <a routerLink="" routerLinkActive="active" class="navbar-brand">VENTANAS</a>
+      <a routerLink="" routerLinkActive="active" class="navbar-brand">LIMPIEZAS</a>
+      -->
     </div>
   </nav>
 </header>
