--- a/src/app/ownership/ownership.component.html
+++ b/src/app/ownership/ownership.component.html
@@ -4,6 +4,9 @@
 
         </article>
     </div> -->
+    <div class="my-2 text-left">
+        <button class="btn btn-rounded border-2 border-dark" style="background-color: #cfcfcf;" type="button" [routerLink]="['/ownership/form']">Crear imbueble</button>
+    </div>
     <article
         class="border border-2 border-black rounded col-3 mx-5 mt-5 text-center pt-4 justify-content-center shadow  mb-5 rounded"
         style="background-color: #f3f3f3;">
