get the data of client to send for edit

--- a/src/app/ownership/form.component.html
+++ b/src/app/ownership/form.component.html
@@ -2,7 +2,7 @@
     <div class="card-header">{{ title }}</div>
     <div class="card-body">
         <!-- Invocation to method create -->
-        <form (ngSubmit)= "create()">
+        <form (ngSubmit)= "createOwnership()">
             <div class="form-group row">
                 <label for="operation" class="col-form-label col-sm-2"></label>
                 <div class="col-sm-6">
