--- a/src/app/ownership/ownership.component.html
+++ b/src/app/ownership/ownership.component.html
@@ -7,6 +7,11 @@
     <div class="my-2 text-left">
         <button class="btn btn-rounded border-2 border-dark" style="background-color: #cfcfcf;" type="button" [routerLink]="['/ownership/form']">Crear imbueble</button>
     </div>
+    
+    <!-- TODO Put this in each article 
+    <button type="button" name="button" [routerLink]="['/ownership/form', ownership.id]" class="btn btn-rounded border-2 border-dark" style="background-color: #cfcfcf;">Editar</button>
+    -->
+    
     <article
         class="border border-2 border-black rounded col-3 mx-5 mt-5 text-center pt-4 justify-content-center shadow  mb-5 rounded"
         style="background-color: #f3f3f3;">
