deleteOwnsership but dont run in backend

--- a/src/app/ownership/ownership.component.html
+++ b/src/app/ownership/ownership.component.html
@@ -50,7 +50,8 @@
                     </div>
                 </li>
             </ul>
-            <button type="button" name="button" [routerLink]="['/ownership/form', ownership.id]" class="btn btn-rounded border-2 border-dark" style="background-color: #cfcfcf;">Editar</button>
+            <button type="button" name="button" [routerLink]="['/ownership/form', ownership.id]" class="btn btn-rounded border-2 border-dark mx-2" style="background-color: #cfcfcf;">Editar</button>
+            <button type="button" name="button" (click)='deleteOwnership(ownership)' class="btn btn-rounded border-2 border-dark" style="background-color: #ff6464;">Borrar</button>
         </div>
     </article>
 </section>
