--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,4 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+*
+    padding: 0
+    margin: 0
+    
 .imgBackground
     position: relative
     bottom: 0
